# glimmer-utils

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
glimmer/: __init__.py
glimmer/data/: __init__.py  collators.py
glimmer/lightning/: __init__.py  glimmerdatamodule.py  lightning_derived.py  lightprogressbar.py  patcheddatamodule.py  patchedlightningdatamodule.py  progressplotter.py  progressprinter.py  utils.py
tests/: test_lightning_derived.py  test_progressprinter.py  test_utils.py
