[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glimmer"
dynamic = ["version"]
authors = [{ name = "Immanuel Weber", email = "immanuel.weber@gmail.com" }]
description = "Utilities for working with PyTorch and PyTorch Lightning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "ipython",
  "torch",
  "pytorch-lightning",
]

keywords = ["pytorch", "lightning", "ml", "utilities", "deep-learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/immanuelweber/glimmer-utils"
Repository = "https://github.com/immanuelweber/glimmer-utils"
Issues = "https://github.com/immanuelweber/glimmer-utils/issues"

[dependency-groups]
dev = [
  "pytest>=6.0",
  "pytest-cov>=3.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "pre-commit>=3.0.0",
]

[tool.setuptools_scm]
write_to = "glimmer/_version.py"

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable comprehensive rule sets for modern Python
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "UP",     # pyupgrade (Python 3.10+ features)
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations (type hints)
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt
    "NPY",    # NumPy-specific rules
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]

ignore = [
    # Line length (formatter handles this)
    "E501",
    # Docstring rules
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D415",    # First line should end with punctuation
    "D417",    # Missing argument description in docstring
    # Security rules (preventive)
    "S101",    # Use of assert detected (common in tests)
    "S110",    # Try-except-pass (sometimes needed for robustness)
    "S112",    # Try-except-continue (acceptable error handling pattern)
    "S311",    # Pseudo-random generator (not used for crypto)
    "S602",    # Subprocess with shell (needed for some operations)
    "S603",    # Subprocess without shell-equals-true check (intentional)
    "S607",    # Start process with partial path (system commands)
    # Formatter conflicts (ruff recommendation)
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicitly concatenated string literals (conflicts with formatter)
    # Boolean argument rules (common in ML/PyTorch patterns)
    "FBT001",  # Boolean-typed positional argument
    "FBT002",  # Boolean default positional argument
    "FBT003",  # Boolean positional value in call
    # Exception handling rules
    "TRY003",  # Avoid specifying long messages outside exception class
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "BLE001",  # Do not catch blind exception (sometimes needed for robustness)
    # Annotation rules
    "ANN401",  # Any-type (needed for flexible APIs)
    # Naming rules (ML conventions: PyTorch F = functional)
    "N812",    # Lowercase imported as non-lowercase (PyTorch: F = functional)
    # Pylint rules (pragmatic for ML codebase)
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments (common in ML models)
    "PLR0915", # Too many statements
    # Import rules
    "TC003",   # Move standard library import into type-checking block (too strict)
    # Executable rules
    "EXE002",  # File is executable but no shebang (not needed for modules)
    # Print rules (ML training output)
    "T201",    # Print found (training scripts use print)
    # Mutable class attributes
    "RUF012",  # Mutable class attributes need ClassVar
    "RUF100",  # Unused noqa directive
    # Complexity
    "C901",    # Function too complex
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # Re-exports are intentional
    "TID252",  # Allow relative imports in __init__.py files (Python best practice)
]
"glimmer/*" = [
    "ARG002",  # Unused method argument (ML interface contracts)
    "ARG005",  # Unused lambda argument (Lightning callbacks)
    "PLR2004", # Magic value used in comparison (ML constants)
    "PLW2901", # Outer loop variable overwritten (legacy code)
    "PLC0415", # Import outside top-level (conditional imports)
    "PD015",   # Use .merge instead of pd.merge (legacy code)
    "E402",    # Module level import not at top (conditional imports)
    "PERF401", # Use list comprehension (legacy code)
    "PERF403", # Use dict comprehension (legacy code)
    "TRY300",  # try-except-return (legacy code)
]
"tests/*" = [
    "S101",    # Use of assert detected
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "D103",    # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
    "ARG005",  # Unused lambda argument (mock callbacks)
    "E402",    # Module level import not at top (test mocking)
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.flake8-import-conventions]
# Declare the default aliases.
[tool.ruff.lint.flake8-import-conventions.aliases]
"numpy" = "np"
"pandas" = "pd"
"matplotlib.pyplot" = "plt"

[tool.ruff.lint.flake8-type-checking]
# Enforce TC001, TC002, and TC003 rules even when `--fix` is provided.
strict = true

[tool.ruff.lint.isort]
# Force single line imports
force-single-line = true
# Sort imports by length
length-sort = true
# Known first party packages
known-first-party = ["glimmer"]
# Required imports (forces imports to top of file)
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
# Allow star-arg, star-star-arg, and missing return types
allow-star-arg-any = true
ignore-fully-untyped = false
mypy-init-return = false
suppress-dummy-args = true
suppress-none-returning = false

[tool.ruff.lint.flake8-bandit]
# Skip bandit rules that are too noisy for ML code
check-typed-exception = true

[tool.ruff.lint.flake8-boolean-trap]
# Allow boolean traps in function signatures (common in ML)
extend-allowed-calls = ["argparse.ArgumentParser.add_argument"]

[tool.ruff.lint.pylint]
# Set max arguments limit
max-args = 15
max-returns = 8
max-statements = 60

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable automatic docstring formatting
docstring-code-format = true
# Enable automatic line length enforcement in docstrings
docstring-code-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=glimmer --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["glimmer"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "torchmetrics.*",
    "pytorch_lightning.*",
    "scipy.*",
    "PIL.*",
]
ignore_missing_imports = true
